debathena-bugme (10.0.5-0debathena2) UNRELEASED; urgency=low

  * Switch from control.in to control (Trac: #561)
  * Bump Standards-Version to 3.9.3
  * Bump compat level to 7

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 13:59:33 -0400

debathena-bugme (10.0.5-0debathena1) unstable; urgency=low

  * Support the --corner option (for limited definitions of "corner")
    (Trac: #1199)

 -- Jonathan Reed <jdreed@mit.edu>  Sat, 04 Aug 2012 11:45:05 -0400

debathena-bugme (10.0.4-0debathena2) unstable; urgency=low

  * Bump debian/compat to 6
  * .present() the window every 10 seconds (Trac: #386)

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 19 Jul 2012 08:01:00 -0400

debathena-bugme (10.0.4-0debathena1) unstable; urgency=low

  [ Geoffrey Thomas ]
  * Set always-on-top window manager hint (Trac: #386). Patch from Luke
    Faraone.

  [ Jonathan Reed ]
  * Add a feature which forces a logout after a 1.5x the "allowed"
    duration (Trac: #830 and #831).  Patch from Luke Faraone.
  * Allow speciyfing Glade file on command line for debugging
  * Minor UI tweaks; this won't always be used on a "Quickstation"
  * Add a "Log out" button to the warning dialog, in case the user somehow
    minimized the kiosk browser and can't get it back

 -- Jonathan Reed <jdreed@mit.edu>  Sun, 03 Jun 2012 11:20:32 -0400

debathena-bugme (10.0.3-0debathena1) unstable; urgency=low

  * Don't run dpkg-query (Trac: #778)

 -- Jonathan Reed <jdreed@mit.edu>  Sat, 19 Feb 2011 18:14:57 -0500

debathena-bugme (10.0.2-0debathena1) unstable; urgency=low

  [ Jessica Hamrick ]
  * Make sure debathena-bugme is installed before executing the xsession
    script

  [ Evan Broder ]
  * Bump the upstream version number for changes outside of debian/

 -- Evan Broder <broder@mit.edu>  Fri, 02 Apr 2010 19:20:51 -0400

debathena-bugme (10.0.1-0debathena2) unstable; urgency=low

  * Use machtype -q to determine if a workstation is a quickstation.
