@@ -1,6 +1,5 @@
 #!/usr/bin/make -f
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/makefile.mk
+%:
+	dh $@
 
-DEB_MAKE_INSTALL_TARGET += install DESTDIR=$(DEB_DESTDIR)
