@@ -1,8 +1,12 @@
 debathena-bugme (10.0.5-0debathena2) UNRELEASED; urgency=low
 
+  [ Jonathan Reed ]
   * Switch from control.in to control (Trac: #561)
   * Bump Standards-Version to 3.9.3
   * Bump compat level to 7
+
+  [ Victor Vasiliev ]
+  * Use debhelper7
 
  -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 13:59:33 -0400
 
